Thu Jun 17 17:57:12 EDT 2004  Lance Arsenault <lanceman@users.sourceforge.net>

	*=== released version 0.7.4 ===
	
	*cleaned up scripts to better use GNU Autotools

	*minor bug fixes
	

2004-05-16   23:49 EDT   Version 0.7.3   lanceman

   Fixed some minor bugs.  Added --silent command line option.
   Made accelerator keys work better.  Documented accelerator keys.
   Made linking with libsndfile optional. Open and Save PNG dialogs
   are reused; this way the directories will be the same as last time.
	


2004-05-01   23:36 EDT   Version 0.7.2   lanceman

    Fixed Accelerator keys.  Fixed frame copy bug.
	

2004-04-23   14:17 EDT   Version 0.7.1   lanceman


     Just minor edits to docs and scripts.


2004-04-22   21:35 EST   Version 0.7.0   lanceman


  The last release of Quickplot was version 0.6.5.  In this version, 0.7.0,
  we changed the widget API we use from QT to GTK using GTKmm
  (http://www.gtkmm.org/).  Most of the code was rewritten when going from
  version 0.6.5 to 0.7.0. 

  Some command line options are not interpreted the same.  

	
  Fixed:
	
	reading WAV sound files works for more WAV files types

	the plot manager has been replaced with a better GUI

	
  Added features include:

	Graph Tabs -- kind of like page tabs in a web browser

	multiple main window frames. Like Emacs has "New Frame".  Each
	main window frame uses the same plot data, but the plots are not
	the same, kind of like Emacs buffers are shared between frames.
	
	reads many sound file types using the package libsndfile
	(http://www.mega-nerd.com/libsndfile/)
	
	can plot any field against any field -- version 0.6.5 could not
	plot the same field against itself or fields against fields with
	a different number of values

	zoom levels do not change when plots are added or removed until
	it's zoomed back all the way out, or is forced to by the plots
	added

	by default the scales are set to fit all plots in a graph so long