@@ -18,6 +18,9 @@ public:
   // "show/hide tabs option.  Is there a signal_show_tabs() or like
   // method???  It's not listed.
   void set_show_tabs(bool show_tabs = true);
+
+  SigC::Signal1<void, Graph *> signal_tabLabelChanged(void);
+  SigC::Signal1<void, Graph *> m_signal_tabLabelChanged;
   
 private:
   MainWindow *mainWindow;
