@@ -1,3 +1,8 @@
+Sun Jul 11 00:03:22 EDT 2004  Lance Arsenault <lanceman@users.sourceforge.net>
+
+	*split GraphConfig widget into two notebook tabs
+
+
 Thu Jun 17 17:57:12 EDT 2004  Lance Arsenault <lanceman@users.sourceforge.net>
 
 	*=== released version 0.7.4 ===
